--- a/story.html
+++ b/story.html
@@ -21,11 +21,8 @@
 <meta name="twitter:title" content="Subscribe to a Cure">
 <meta name="twitter:description" content="Using Social Media to Raise Funds and Awareness for Life Threatening Illnesses
 .">
-<meta name="twitter:image" content="https://www.subscribetoacure.org/files/theme/Thumbnail.jpg">
+<meta name="twitter:image" content="images/Thumbnail.jpg">
 <!-- End Social Media Thumbnail -->
-
-
-<!-- // Flipcause Integration Code v3.1 // Flipcause Integration Instructions: Install the following code block ONCE in the website Header (after <head> tag) // This code is designed to launch standard integration buttons, floating integrations buttons, and direct embeds  // This code block only needs to be installed once to activate all integrations site wide // Begin Flipcause Integration Code //-->
 
 <style>
 
@@ -53,7 +50,7 @@ opacity:1; display:none; margin:15px auto 0 auto; width:930px; position:relative
 
 .fc-widget_close{
 
-opacity:1; background: url( https://www.flipcause.com/assets/close-icon.png);
+opacity:1; background: url( images/close-icon.png);
 
 position:absolute; z-index:1000004; right:-16px; top:-16px; display:block; cursor:pointer; width:49px; height:49px;
 
@@ -985,7 +982,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
       <div class="wsite-elements wsite-not-footer wsite-header-elements">
 	<div class="wsite-section-wrap">
 	<div  class="wsite-section wsite-header-section wsite-section-bg-image"
-      style="background-image: url(http://subscribetoacure.org/background.jpeg&quot;) ;background-repeat: no-repeat ;background-position: 90.80% 49.91% ;background-size: 120% ;background-color: transparent ;background-size: 120%;" >
+      style="background-image: url(images/background.jpeg) ;background-repeat: no-repeat ;background-position: 90.80% 49.91% ;background-size: 120% ;background-color: transparent ;background-size: 120%;" >
 		<div class="wsite-section-content">
 
           <div class="container">
@@ -1027,6 +1024,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <img src="images/landon-gallery_orig.jpeg" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
+
 </div></div>
 
 <div class="wsite-spacer" style="height:71px;"></div>
