--- a/story.html
+++ b/story.html
@@ -988,7 +988,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="container">
             <div class="banner">
 				<div class="wsite-section-elements">
-					<h2 class="wsite-content-title">Landon's Story</h2>
+					<h2 class="wsite-content-title">Landon's<br>Story</h2>
 				</div>
 			</div>
           </div>
