--- a/donate.html
+++ b/donate.html
@@ -985,7 +985,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
       <div class="wsite-elements wsite-not-footer wsite-header-elements">
 	<div class="wsite-section-wrap">
 	<div  class="wsite-section wsite-header-section wsite-section-bg-image"
-      style="background-image: url(http://subscribetoacure.org/background.jpeg&quot;) ;background-repeat: no-repeat ;background-position: 90.80% 49.91% ;background-size: 120% ;background-color: transparent ;background-size: 120%;" >
+      style="background-image: url(images/background.jpeg) ;background-repeat: no-repeat ;background-position: 90.80% 49.91% ;background-size: 120% ;background-color: transparent ;background-size: 120%;" >
 		<div class="wsite-section-content">
 
           <div class="container">
@@ -1013,6 +1013,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="container">
 			<div class="wsite-section-elements">
 				<div class="paragraph">&#8203;<span style="color:rgb(0, 0, 0)">Subscribe to a Cure is a proud sponser of&nbsp;</span><a href="https://fundraising.stjude.org/site/TR/GiftFunds/GiftFunds?px=7120104&amp;pg=personal&amp;fr_id=39300" target="_blank">St. Jude Children's Research</a><span style="color:rgb(29, 28, 29)">. Please join us in our goal of raising $1M for childhood cancer.<br />&#8203;</span><br /></div>
+
 
 
 
